POST /zigzagの実装追加
